--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.3|^8.0",
         "ext-json": "*",
         "fideloper/proxy": "^4.4",
+        "flynsarmy/csv-seeder": "^2.0",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^8.12",
