--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,9 @@
         "php": "^7.3|^8.0",
         "ext-json": "*",
         "fideloper/proxy": "^4.4",
-        "flynsarmy/csv-seeder": "^2.0",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
+        "jeroenzwart/laravel-csv-seeder": "^1.5",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.1",
